storage/python_final_debug.txt
  File "<string>", line 1
    import sys; print(sys.path); print("---"); try: import pandas; print(\Pandas
                                               ^
SyntaxError: invalid syntax